[TTW-1] Add Microsoft Store badge to README and update landing page CTAs
- Added a "Get it from Microsoft" badge in README.md.
- Updated landing page: included Microsoft Store link for streamlined downloads, improved CTA button labels.

--- a/index.html
+++ b/index.html
@@ -305,8 +305,11 @@
             </div>
 
             <div class="cta-buttons">
+                <a href="https://apps.microsoft.com/detail/9NF0N9LN349G" class="btn" style="background: #0078d4; color: white;">
+                    <img src="https://get.microsoft.com/images/en-us%20light.svg" alt="Get it from Microsoft" style="height: 32px; vertical-align: middle;">
+                </a>
                 <a href="https://github.com/melihcelenk/TaskTimerWidget" class="btn">View on GitHub</a>
-                <a href="https://github.com/melihcelenk/TaskTimerWidget/releases" class="btn btn-secondary">Download</a>
+                <a href="https://github.com/melihcelenk/TaskTimerWidget/releases" class="btn btn-secondary">Download Release</a>
             </div>
         </header>
 
